<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>am.ik.blog</groupId>
	<artifactId>blog-frontend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>blog-frontend</name>
	<description>blog-frontend</description>
	<properties>
		<java.version>21</java.version>
		<graalvm.version>24.0.1</graalvm.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.graalvm.polyglot</groupId>
			<artifactId>polyglot</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.polyglot</groupId>
			<artifactId>js-community</artifactId>
			<version>${graalvm.version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>am.ik.spring.opentelemetry</groupId>
			<artifactId>otel-logs-autoconfigure</artifactId>
			<version>0.1.1</version>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-tracing-bridge-otel</artifactId>
		</dependency>
		<dependency>
			<groupId>io.opentelemetry</groupId>
			<artifactId>opentelemetry-exporter-otlp</artifactId>
		</dependency>
		<dependency>
			<groupId>am.ik.spring</groupId>
			<artifactId>retryable-client-http-request-interceptor</artifactId>
			<version>0.4.2</version>
		</dependency>
		<dependency>
			<groupId>am.ik.pagination</groupId>
			<artifactId>pagination</artifactId>
			<version>0.2.0</version>
		</dependency>
		<dependency>
			<groupId>am.ik.access-logger</groupId>
			<artifactId>access-logger</artifactId>
			<version>0.3.2</version>
		</dependency>
		<dependency>
			<groupId>am.ik.blog</groupId>
			<artifactId>blog-api-client</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>am.ik.note</groupId>
			<artifactId>note-api-client</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>am.ik.spring.ecs</groupId>
			<artifactId>logback-ecs-encoder-autoconfigure</artifactId>
			<version>0.1.2</version>
		</dependency>
		<dependency>
			<groupId>cc.jilt</groupId>
			<artifactId>jilt</artifactId>
			<version>1.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.opentelemetry.contrib</groupId>
			<artifactId>opentelemetry-samplers</artifactId>
			<version>1.35.0-alpha</version>
		</dependency>
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>0.2.6</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.github.ulfs</groupId>
			<artifactId>assertj-jsoup</artifactId>
			<version>0.1.4</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArgs>
						<arg>-XDcompilePolicy=simple</arg>
						<arg>-Xplugin:ErrorProne -Xep:NullAway:ERROR -XepOpt:NullAway:AnnotatedPackages=am.ik.blog
							-XepExcludedPaths:(.*/test/java/.*|.*/target/generated-sources/.*)
						</arg>
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>cc.jilt</groupId>
							<artifactId>jilt</artifactId>
							<version>1.5</version>
						</path>
						<path>
							<groupId>com.google.errorprone</groupId>
							<artifactId>error_prone_core</artifactId>
							<version>2.27.1</version>
						</path>
						<path>
							<groupId>com.uber.nullaway</groupId>
							<artifactId>nullaway</artifactId>
							<version>0.10.25</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>process-aot</id>
						<configuration>
							<systemPropertyVariables>
								<management.otlp.tracing.endpoint>
									http://otel-collector.opentelemetry.svc.cluster.local:4318/v1/traces
								</management.otlp.tracing.endpoint>
							</systemPropertyVariables>
						</configuration>
					</execution>
					<execution>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<layers>
						<enabled>true</enabled>
					</layers>
					<additionalProperties>
						<spring.boot.version>${project.parent.version}
						</spring.boot.version>
						<spring.framework.version>${spring-framework.version}
						</spring.framework.version>
						<spring.security.version>${spring-security.version}
						</spring.security.version>
					</additionalProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.spring.javaformat</groupId>
				<artifactId>spring-javaformat-maven-plugin</artifactId>
				<version>0.0.41</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<inherited>true</inherited>
						<goals>
							<goal>validate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.eirslett</groupId>
				<artifactId>frontend-maven-plugin</artifactId>
				<version>1.15.0</version>
				<configuration>
					<installDirectory>target</installDirectory>
					<nodeVersion>v20.11.1</nodeVersion>
				</configuration>
				<executions>
					<execution>
						<id>install node and npm</id>
						<goals>
							<goal>install-node-and-npm</goal>
						</goals>
					</execution>
					<execution>
						<id>npm install polyfill</id>
						<goals>
							<goal>npm</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<arguments>install</arguments>
							<workingDirectory>${project.build.directory}/classes/polyfill</workingDirectory>
						</configuration>
					</execution>
					<execution>
						<id>npm install ui</id>
						<goals>
							<goal>npm</goal>
						</goals>
						<configuration>
							<arguments>install</arguments>
							<workingDirectory>${project.basedir}/ui</workingDirectory>
						</configuration>
					</execution>
					<execution>
						<id>npm run lint ui</id>
						<goals>
							<goal>npm</goal>
						</goals>
						<phase>test</phase>
						<configuration>
							<arguments>run lint</arguments>
							<workingDirectory>${project.basedir}/ui</workingDirectory>
						</configuration>
					</execution>
					<execution>
						<id>npm run build ui</id>
						<goals>
							<goal>npm</goal>
						</goals>
						<phase>compile</phase>
						<configuration>
							<arguments>run build</arguments>
							<workingDirectory>${project.basedir}/ui</workingDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<phase>process-resources</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<target>
								<delete>
									<fileset dir="${project.build.directory}/classes/polyfill" includes="**/*"
											 excludes="**/*.js, **/*.json"/>
								</delete>
								<delete>
									<fileset dir="${project.build.directory}/classes/polyfill"
											 includes="**/test/**, **/tests/**"/>
								</delete>
							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>sonatype-snapshots</id>
			<name>Sonatype Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

</project>
